--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -59,8 +59,8 @@
 {#                            </a>#}
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item  text-white" href="carts/cart.html">Корзина</a></li>
-                                <li><a class="dropdown-item  text-white" href="users/profile.html">Личный кабинет</a>
-                                </li>
+{#                                <li><a class="dropdown-item  text-white" href="users/profile.html">Личный кабинет</a>#}
+{#                                </li>#}
                                 <li><a class="dropdown-item  text-white" href="#">Админ панель</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
@@ -89,13 +89,12 @@
                         <img class="mx-1" src="{% static "deps/icons/grid-fill.svg" %} "height="16">
                     </button>
                     <ul class="dropdown-menu bg-dark" data-bs-theme="dark">
-                        <li><a class="dropdown-item text-white" href="{% url "catalog:index" %}">Всі товари</a></li>
-                        <li><a class="dropdown-item text-white" href="{% url "catalog:index" %}">Кухня</a></li>
-                        <li><a class="dropdown-item text-white" href="{% url "catalog:index" %}">Спальня</a></li>
-                        <li><a class="dropdown-item text-white" href="{% url "catalog:index" %}">Гостинная</a></li>
-                        <li><a class="dropdown-item text-white" href="{% url "catalog:index" %}">Офис</a></li>
-                        <li><a class="dropdown-item text-white" href="{% url "catalog:index" %}">Фурнитура</a></li>
-                        <li><a class="dropdown-item text-white" href="{% url "catalog:index" %}">Декор</a></li>
+                        {% for category in categories %}
+                             <li><a class="dropdown-item text-white" href="{% url "catalog:index" %}">{{ category.name }}</a></li>
+                        {% endfor %}
+
+
+
                     </ul>
                 </div>
                 <!-- Значек корзины, вызывает модальное окно -->
