--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -1,4 +1,7 @@
 {% load static %}
+{% load goods_tags %}
+
+
 
 
 <!DOCTYPE html>
@@ -89,6 +92,7 @@
                         <img class="mx-1" src="{% static "deps/icons/grid-fill.svg" %} "height="16">
                     </button>
                     <ul class="dropdown-menu bg-dark" data-bs-theme="dark">
+                        {% tag_categories as categories %}
                         {% for category in categories %}
                              <li><a class="dropdown-item text-white" href="{% url "catalog:index" %}">{{ category.name }}</a></li>
                         {% endfor %}
