--- a/goods/templates/goods/product.html
+++ b/goods/templates/goods/product.html
@@ -3,45 +3,34 @@
 {% load static %}
 
 {% block content %}
-	<div class="container mt-5">
-                        <div class="card mb-4 custom-shadow">
-                            <div class="row">
-                                <!-- Миниатюры -->
-                                <div class="col-md-4">
-                                    <img src="../deps/images/goods/set of tea table and three chairs.jpg"
-                                        class="img-thumbnail" data-bs-toggle="modal" data-bs-target="#imageModal1">
-                                </div>
-                                <div class="col-md-4 ">
-                                    <p class="product_id mt-3">id: 002654</p>
-                                </div>
-                                <!-- Увеличить изображение в модальном окне -->
-                                <div class="modal fade" id="imageModal1" tabindex="-1"
-                                    aria-labelledby="imageModal1Label" aria-hidden="true">
-                                    <div class="modal-dialog modal-lg">
-                                        <div class="modal-content">
-                                            <div class="modal-header">
-                                                <h5 class="modal-title" id="imageModal1Label">Изображение 1</h5>
-                                                <button type="button" class="btn-close" data-bs-dismiss="modal"
-                                                    aria-label="Закрыть"></button>
-                                            </div>
-                                            <div class="modal-body">
-                                                <img src="../deps/images/goods/set of tea table and three chairs.jpg"
-                                                    class="img-fluid" alt="Изображение 1">
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <!-- Описание товара -->
-                            <div class="card-body">
-                                <p class="card-text">Цена: <strong>150.00 грн</strong></p>
-                                <h5 class="card-title">Чайный столик и три стула</h5>
-                                <p class="card-text">Комплект из трёх стульев и дизайнерский столик для гостинной
-                                    комнаты.</p>
-                                <a href="#" class="btn btn-dark add-to-cart">Добавить в корзину</a>
-                            </div>
-                        </div>
-                    </div>
+    <div id="myModal" class="modal">
+    <div class="modal-content">
+        <span class="close">&times;</span>
+        <p id="modal-message"></p>
+    </div>
+</div>
+
+    <!-- Ваш HTML-код ... -->
+
+<div class="product-card" id="productCard" data-product-name="{{ product.name }}">
+    <img src="{{ product.image.url }}" alt="{{ product.name }}">
+    <h2>{{ product.name }}</h2>
+    <p>{{ product.description }}</p>
+    <h5 class="product-price">{{ product.price }} грн</h5>
+    <div class="quantity">
+        <label for="quantity">Кількість:</label>
+        <input type="number" id="quantity" name="quantity" value="1" min="1">
+    </div>
+    <button id="addToCartBtn">Додати до кошика</button>
+    <div class="additional-buttons" style="display: none;">
+        <button id="continueShoppingBtn">Продовжити покупки</button>
+        <button id="checkoutBtn">Оформити замовлення</button>
+    </div>
+</div>
+
+<!-- Ваш HTML-код ... -->
+
+
 {% endblock content %}
 
 
