--- a/goods/templates/goods/catalog.html
+++ b/goods/templates/goods/catalog.html
@@ -46,7 +46,7 @@
                         <!-- Карта товара -->
                         <div class="col-lg-4 col-md-6 p-4">
 
-                            <div class="card border-primary rounded custom-shadow">
+                            <div class="card border-primary rounded my-shadow ">
                                 {% if product.image  %}
                                 	 <img src="{{ product.image.url }}" class="card-img-top" alt={{ product.name }}>
                                     {% else %}
@@ -82,22 +82,35 @@
       {% endfor %}
                     </div>
 
-                    <!-- Пагинация -->
-                    <nav aria-label="Page navigation example">
-                        <ul class="pagination justify-content-center my-4">
-                            <div class="custom-shadow d-flex">
-                                <li class="page-item disabled">
-                                  <a class="page-link">Previous</a>
-                                </li>
-                                <li class="page-item"><a class="page-link" href="#">1</a></li>
-                                <li class="page-item"><a class="page-link" href="#">2</a></li>
-                                <li class="page-item"><a class="page-link" href="#">3</a></li>
-                                <li class="page-item">
-                                  <a class="page-link" href="#">Next</a>
-                                </li>
-                            </div>
-                        </ul>
-                    </nav>
+
+        <!-- Пагінація -->
+<nav aria-label="Page navigation example">
+    <ul class="pagination justify-content-center my-4">
+        <div class="custom-shadow d-flex">
+            <li class="page-item {% if not goods.has_previous %}disabled{% endif %}">
+                <a class="page-link" href="{% if goods.has_previous %}?page = {{ goods.previous_page_number }}{% else %} # {% endif %}">Попередня</a>
+            </li>
+
+            {% with lower_limit=goods.number|add:"-2" upper_limit=goods.number|add:"2" %}
+                {% for page in goods.paginator.page_range %}
+                    {% if page >= lower_limit and page <= upper_limit %}
+                        <li class="page-item {% if goods.number == page %}active{% endif %}">
+                            <a class="page-link" href="?page={{ page }}">{{ page }}</a>
+                        </li>
+                    {% endif %}
+                {% endfor %}
+
+
+            {% endwith %}
+            <li class="page-item {% if not goods.has_next %}disabled{% endif %}">
+                <a class="page-link" href="{% if goods.has_next %}?page = {{ goods.next_page_number }}{% else %} # {% endif %}">Наступна</a>
+            </li>
+        </div>
+    </ul>
+</nav>
+
+
+
 {% endblock content %}
 
 
