--- a/static/deps/css/my_css.css
+++ b/static/deps/css/my_css.css
@@ -11,8 +11,8 @@ body {
   content: none;
 }
 
-.custom-shadow {
-  box-shadow: 5px 5px 25px 19px #000000;
+.my-shadow {
+  box-shadow: 2px 2px 15px 10px #000000;
 }
 
 .product_id {
