--- a/goods/templates/goods/catalog.html
+++ b/goods/templates/goods/catalog.html
@@ -1,6 +1,7 @@
 {% extends 'main/base.html' %}
 
 {% load static %}
+{% load goods_tags %}
 
 
 {% block content %}
@@ -88,14 +89,14 @@
     <ul class="pagination justify-content-center my-4">
         <div class="custom-shadow d-flex">
             <li class="page-item {% if not goods.has_previous %}disabled{% endif %}">
-                <a class="page-link" href="{% if goods.has_previous %}?page = {{ goods.previous_page_number }}{% else %} # {% endif %}">Попередня</a>
+                <a class="page-link" href="{% if goods.has_previous %}?{% change_params page=goods.previous_page_number %}{% else %} # {% endif %}">Попередня</a>
             </li>
 
             {% with lower_limit=goods.number|add:"-2" upper_limit=goods.number|add:"2" %}
                 {% for page in goods.paginator.page_range %}
                     {% if page >= lower_limit and page <= upper_limit %}
                         <li class="page-item {% if goods.number == page %}active{% endif %}">
-                            <a class="page-link" href="?page={{ page }}">{{ page }}</a>
+                            <a class="page-link" href="?{% change_params page=page %}">{{ page }}</a>
                         </li>
                     {% endif %}
                 {% endfor %}
@@ -103,7 +104,7 @@
 
             {% endwith %}
             <li class="page-item {% if not goods.has_next %}disabled{% endif %}">
-                <a class="page-link" href="{% if goods.has_next %}?page = {{ goods.next_page_number }}{% else %} # {% endif %}">Наступна</a>
+                <a class="page-link" href="{% if goods.has_next %}?{% change_params page=goods.next_page_number %}{% else %} # {% endif %}">Наступна</a>
             </li>
         </div>
     </ul>
