--- a/goods/templates/goods/catalog.html
+++ b/goods/templates/goods/catalog.html
@@ -1,125 +1,98 @@
-{% extends 'main/base.html' %}
+{% extends 'base.html' %}
 
 {% load static %}
 {% load goods_tags %}
 
-
 {% block content %}
-    <div class="row">
-                        <!-- Форма фильтров -->
-{#                        <div class="dropdown mb-2">#}
-{#                            <button class="btn btn-secondary dropdown-toggle btn-dark" type="button" data-bs-toggle="dropdown"#}
-{#                                aria-expanded="false">#}
-{#                                Фильтры#}
-{#                            </button>#}
-{##}
-{#                            <form action="" method="get" class="dropdown-menu bg-dark" data-bs-theme="dark">#}
-{#                                <div class="form-check text-white mx-3">#}
-{#                                    <input class="form-check-input" type="checkbox" name="on_sale" id="flexCheckDefault" value="on">#}
-{#                                    <input type="hidden" name="q" value="request.GET.q">#}
-{#                                    <label class="form-check-label" for="flexCheckDefault">#}
-{#                                        Товары по акции#}
-{#                                    </label>#}
-{#                                </div>#}
-{#                                <p class="text-white mx-3 mt-3">Сортировать:</p>#}
-{#                                <div class="form-check text-white mx-3">#}
-{#                                    <input class="form-check-input" type="radio" name="order_by" id="flexRadioDefault1" value="default" checked>#}
-{#                                    <label class="form-check-label" for="flexRadioDefault1">#}
-{#                                        По умолчанию#}
-{#                                    </label>#}
-{#                                </div>#}
-{#                                <div class="form-check text-white mx-3">#}
-{#                                    <input class="form-check-input" type="radio" name="order_by" id="flexRadioDefault2" value="price">#}
-{#                                    <label class="form-check-label" for="flexRadioDefault2">#}
-{#                                        От дешевых к дорогим#}
-{#                                    </label>#}
-{#                                </div>#}
-{#                                <div class="form-check text-white mx-3">#}
-{#                                    <input class="form-check-input" type="radio" name="order_by" id="flexRadioDefault3" value="-price">#}
-{#                                    <label class="form-check-label" for="flexRadioDefault3">#}
-{#                                        От дорогих к дешевым#}
-{#                                    </label>#}
-{#                                </div>#}
-{#                                <button type="submit" class="btn btn-primary mx-3 mt-3">Применить</button>#}
-{#                            </form>#}
-{#                        </div>#}
-                        {% for product in goods %}
-                        <!-- Карта товара -->
-                        <div class="col-lg-4 col-md-6 p-4">
-
-                            <div class="card border-primary rounded my-shadow ">
-                                {% if product.image  %}
-                                	 <img src="{{ product.image.url }}" class="card-img-top" alt={{ product.name }}>
+<div class="container-fluid">
+    <div class="row mt-5 mb-4"> <!-- Додано класи mt-5 та mb-4 -->
+        <div class="col">
+            {% if request.GET.q %}
+            <h3 class=" result search-results-heading">Результати пошуку за запитом {{ request.GET.q }}</h3> <!-- Додано клас search-results-heading -->
+            {% if not goods %}
+            <link rel="stylesheet" href="{% static "deps/css/my_footer_css.css" %}">
+            <h2 class="result no-result search-results-heading">Нічого не знайдено</h2>
+            {% endif %}
+            {% endif %}
+            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+                {% for product in goods %}
+                <!-- Карта товара -->
+                <div class="col mt-4">
+                    <div class="card border-primary rounded my-shadow h-100">
+                        {% if product.image %}
+                        <img src="{{ product.image.url }}" class="card-img-top" alt="{{ product.name }}">
+                        {% else %}
+                        <img src="{% static "deps/images/Not found image.png" %}" class="card-img-top" alt="...">
+                        {% endif %}
+                        <div class="card-body">
+                            <a href="{% url "catalog:product" product.slug %}">
+                                <p class="card-title">
+                                    {% autoescape off %}
+                                    {% if product.headline %}
+                                    {{product.headline}}
                                     {% else %}
-                                        <img src="{% static "deps/images/Not found image.png" %}" class="card-img-top" alt="...">
-
+                                    {{ product.name }}
+                                    {% endif %}
+                                    {% endautoescape %}
+                                </p>
+                            </a>
+                            <p class="card-text">
+                                {% autoescape off %}
+                                {% if product.bodyline %}
+                                {{product.bodyline|truncatechars:100}}
+                                {% else %}
+                                {{ product.description|truncatechars:35 }}
                                 {% endif %}
-
-                                <div class="card-body">
-                                    <a href="{% url "catalog:product" product.slug %}">
-                                        <p class="card-title">{{ product.name }}</p>
-                                    </a>
-                                    <p class="card-text text-truncate">{{ product.description }}</p>
-                                    <p class="product_id">id: {{ product.display_id }}</p>
-                                    <div class="d-flex justify-content-between">
-                                        {% if product.discount %}
-                                            <p><s>{{ product.price }}</s> грн</p>
-                                        <p><strong>{{ product.sell_price }} грн</strong></p>
-                                        <span class="badge bg-warning text-dark">Скидка {{ product.discount }}%</span>
-                                        {% else %}
-                                            <p><strong>{{ product.price }} грн</strong></p>
-                                        {% endif %}
-
-
-
-                                        <a href="#" class="btn add-to-cart">
-                                            <img class="mx-1" src="{% static "deps/icons/cart-plus.svg" %}" alt="Catalog Icon"
-                                                width="32" height="32">
-                                        </a>
-                                    </div>
-                                </div>
+                                {% endautoescape %}
+                            </p>
+                            <p class="product_id">id: {{ product.display_id }}</p>
+                            <div class="d-flex justify-content-between">
+                                {% if product.discount %}
+                                <p><s>{{product.price}}</s> грн</p>
+                                <p><strong>{{ product.sell_price }} грн</strong></p>
+                                <span class="badge bg-warning text-dark">Скидка {{ product.discount }} %</span>
+                                {% else %}
+                                <p><strong>{{ product.price }} грн</strong></p>
+                                {% endif %}
+                                <a href="" class="btn add-to-cart" data-product-id="{{ product.id }}">
+                                    {% csrf_token %}
+                                    <img class="mx-1" src="{% static "deps/icons/cart-plus.svg" %}" alt="Catalog Icon" width="32"
+                                        height="32">
+                                </a>
                             </div>
                         </div>
-      {% endfor %}
                     </div>
+                </div>
+                {% endfor %}
+            </div>
+        </div>
+    </div>
+</div>
 
-
-        <!-- Пагінація -->
+<!-- Пагінація -->
+{% if goods %}
 <nav aria-label="Page navigation example">
     <ul class="pagination justify-content-center my-4">
-        <div class="custom-shadow d-flex">
+        <div class="my-shadow d-flex">
             <li class="page-item {% if not goods.has_previous %}disabled{% endif %}">
-                <a class="page-link" href="{% if goods.has_previous %}?{% change_params page=goods.previous_page_number %}{% else %} # {% endif %}">Попередня</a>
+                <a class="page-link"
+                    href="{% if goods.has_previous %}?{% change_params page=goods.previous_page_number %}{% else %} # {% endif %}">Попередня</a>
             </li>
-
             {% with lower_limit=goods.number|add:"-2" upper_limit=goods.number|add:"2" %}
-                {% for page in goods.paginator.page_range %}
-                    {% if page >= lower_limit and page <= upper_limit %}
-                        <li class="page-item {% if goods.number == page %}active{% endif %}">
-                            <a class="page-link" href="?{% change_params page=page %}">{{ page }}</a>
-                        </li>
-                    {% endif %}
-                {% endfor %}
-
-
+            {% for page in goods.paginator.page_range %}
+            {% if page >= lower_limit and page <= upper_limit %}
+            <li class="page-item {% if goods.number == page %}active{% endif %}">
+                <a class="page-link" href="?{% change_params page=page %}">{{ page }}</a>
+            </li>
+            {% endif %}
+            {% endfor %}
             {% endwith %}
             <li class="page-item {% if not goods.has_next %}disabled{% endif %}">
-                <a class="page-link" href="{% if goods.has_next %}?{% change_params page=goods.next_page_number %}{% else %} # {% endif %}">Наступна</a>
+                <a class="page-link"
+                    href="{% if goods.has_next %}?{% change_params page=goods.next_page_number %}{% else %} # {% endif %}">Наступна</a>
             </li>
         </div>
     </ul>
 </nav>
-
-
-
+{% endif %}
 {% endblock content %}
-
-
-{% block footer %}
-     <footer class="py-4 bg-dark">
-{#        <div class="container">#}
-{#            <p class="m-0 text-center text-white">Copyright &copy; Home Python Hub Studio 2023</p>#}
-{#        </div>#}
-    </footer>
-{% endblock footer %}
-
