--- a/static/deps/css/my_footer_css.css
+++ b/static/deps/css/my_footer_css.css
@@ -1,7 +1,8 @@
-footer {
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-    background-color: #343a40;
-    padding: 10px 0;
-  }
+/*footer {*/
+  /*  position: fixed;*/
+  /*  bottom: 0;*/
+  /*  width: 100%;*/
+  /*  margin: 0 auto;*/
+  /*  background-color: #343a40;*/
+  /*  padding: 10px 0;*/
+  /*}*/
