--- a/static/deps/css/product_style.css
+++ b/static/deps/css/product_style.css
@@ -1,163 +1,81 @@
-.product-card {
-        max-width: 700px;
+#addToCartBtn {
+    margin-top: 10px;
+    display: inline-block !important;
+    width: 200px;
+    padding: 10px;
+}
+
+.product-title {
+    margin-bottom: 20px;
+
+}
+
+
+    .product-card {
+        margin-top: 50px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        background: white;
         padding: 20px;
-        border: 1px solid #ddd;
         border-radius: 10px;
-        background-color: #ffffff;
-        box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-        margin: 0 auto;
-        font-family: Arial, sans-serif;
-        text-align: center;
     }
 
-    .card-body {
-        min-height: 280px;
-
-    }
-
-    .product-card img {
-        max-width: 100%;
-        height: auto;
-        border-radius: 5px;
-        margin-bottom: 15px;
-    }
-
-    .product-card h2 {
-        font-weight: bold;
-        font-size: 18px;
-        color: #333;
-    }
-
-    .product-card p {
-        font-size: 16px;
-        color: #666;
-        margin-bottom: 15px;
-
-
-    }
-
-    .product-card .quantity {
-        margin-bottom: 15px;
-    }
-
-    .product-card label {
-        font-size: 16px;
-        color: #333;
-        margin-right: 10px;
-    }
-
-    .product-card input {
-        width: 50px;
-        padding: 8px;
-        font-size: 16px;
-        border: 1px solid #ddd;
-        border-radius: 5px;
-        text-align: center;
-    }
-
-    .product-card button {
-        background-color: #008CBA;
-        color: white;
-        padding: 12px 24px;
-        border: none;
-        border-radius: 5px;
-        cursor: pointer;
-        font-size: 16px;
-        margin-top: 15px;
-
-    }
-
-    .product-card button:hover {
-        background-color: #007B9A;
+    .product_desc {
+        margin-bottom: 20px !important;
     }
 
     .product-price {
         font-weight: bold;
-        color: #000000;
+        margin-bottom: 20px;
     }
 
-    /* Додаткові кнопки */
-    .additional-buttons {
+    .product-card > div {
         display: flex;
-        justify-content: space-between;
-        margin-top: 15px;
+        flex-direction: column;
+        width: 100%;
     }
 
-    .additional-buttons button {
-        background-color: #4CAF50;
-        color: white;
+    .product-info {
+        width: 100%;
+        position: relative;
+    }
+
+    .product-info h5.product-price {
+        margin-bottom: 10px;
+    }
+
+    .add-to-cart-btn {
+        width: fit-content;
+        margin-top: 10px;
         padding: 10px 20px;
+        background-color: #007bff;
+        color: #fff;
+        text-decoration: none;
         border: none;
-        border-radius: 5px;
         cursor: pointer;
-        font-size: 16px;
-        flex-grow: 1;
-        margin: 0 5px;
+        text-align: center;
+        border-radius: 5px;
+        transition: background-color 0.3s;
     }
 
-    .additional-buttons button:hover {
-        background-color: #45a049;
+    .add-to-cart-btn:hover {
+        background-color: #0056b3;
     }
 
-    /* Стилі для модального вікна */
-#myModal {
-    display: none;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5); /* Півпрозорий чорний фон */
-}
+    @media (min-width: 768px) {
+        .product-card {
+            margin-top: 15px;
+            flex-direction: row;
+            align-items: flex-start;
+        }
 
-.modal-content {
-    background-color: #fff;
-    margin: 10% auto;
-    padding: 20px;
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-    max-width: 400px;
-}
+        .product-card > div {
+            width: 50%;
+        }
 
-.close {
-    color: #aaa;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
-}
-
-.close:hover,
-.close:focus {
-    color: black;
-    text-decoration: none;
-    cursor: pointer;
-}
-
-/* Стилі для додаткових кнопок */
-.additional-buttons {
-    display: none;
-    justify-content: space-between;
-    margin-top: 20px;
-}
-
-.additional-buttons button {
-    background-color: #008CBA;
-    color: white;
-    padding: 12px 24px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    font-size: 16px;
-}
-
-.additional-buttons button:hover {
-    background-color: #007B9A;
-}
-
-
-    @media screen and (max-width: 600px) {
-        .additional-buttons button {
-            margin-bottom: 10px;
-            flex-basis: 100%;
+        .product-info {
+            padding: 0 20px;
         }
     }
+{}
