--- a/static/deps/css/my_css.css
+++ b/static/deps/css/my_css.css
@@ -60,6 +60,7 @@ body {
 
 .info-text{
     margin-bottom: 20px !important;
+    font-size: 20px;
 }
 
 .result {
@@ -69,6 +70,13 @@ body {
 
 .no-result {
     margin-top: 30px;
+}
+
+@media (max-width: 700px) {
+    .info-text {
+        font-size: 18px;
+    }
+
 }
 
 @media (max-width: 400px) {
