--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -10,13 +10,28 @@
                 <form action="{% url "user:login" %}" method="post">
                     {% csrf_token %}
 
+                    {% if form.non_field_errors %}
+                        <div class="alert alert-danger">
+                            {% for error in form.non_field_errors %}
+                                {{ error }}
+                            {% endfor %}
+                        </div>
+                    {% endif %}
+
                     <div class="mb-3">
-                        <label for="id_username" class="form-label">Ім'я користувача</label>
+                        <label for="id_username" class="form-label">Електронна пошта</label>
                         <input type="text" class="form-control"
                         value="{% if form.username.value %}{{ form.username.value }}{% endif %}"
                         name="username" id="id_username"
-                        placeholder="Введіть ваше ім'я користувача"
+                        placeholder="Введіть вашу електронну пошту "
                         required>
+                        {% if form.username.errors %}
+                            <div class="alert alert-danger">
+                                {% for error in form.username.errors %}
+                                    {{ error }}
+                                {% endfor %}
+                            </div>
+                        {% endif %}
                     </div>
                     <div class="mb-3">
                         <label for="id_password" class="form-label">Пароль</label>
@@ -46,3 +61,6 @@
     </div>
 </div>
 {% endblock %}
+
+
+
