--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -13,33 +13,33 @@
                     {% csrf_token %}
                         <div class="row">
                             <div class="col-md-12 mb-3">
-                                <label for="id_first_name" class="form-label">Ім'я*</label>
+                                <label for="id_first_name" class="form-label">Ім'я</label>
                                 <input type="text" class="form-control" id="id_first_name" name="first_name" placeholder="Введіть ваше ім'я" value="{{ form.first_name.value }}" required>
                                 {% if form.first_name.errors %}
                                     <div class="alert alert-danger alert-dismissible fade show">{{ form.first_name.errors }}</div>
                                 {% endif %}
                             </div>
                             <div class="col-md-12 mb-3">
-                                <label for="id_last_name" class="form-label">Прізвище*</label>
+                                <label for="id_last_name" class="form-label">Прізвище</label>
                                 <input type="text" class="form-control" id="id_last_name" name="last_name" placeholder="Введіть ваше прізвище" value="{{ form.last_name.value }}" required>
                                 {% if form.last_name.errors %}
                                     <div class="alert alert-danger alert-dismissible fade show">{{ form.last_name.errors }}</div>
                                 {% endif %}
                             </div>
                             <div class="col-md-12 mb-3">
-                                <label for="id_username" class="form-label">Ім'я користувача*</label>
-                                <input type="text" class="form-control" id="id_username" name="username" placeholder="Введіть ваше ім'я користувача" value="{{ form.username.value }}" required>
+                                <label for="id_username" class="form-label">Електронна пошта</label>
+                                <input type="text" class="form-control" id="id_username" name="username" placeholder="Введіть вашу електронну пошту" value="{{ form.username.value }}" required>
                                 {% if form.username.errors %}
                                     <div class="alert alert-danger alert-dismissible fade show">{{ form.username.errors }}</div>
                                 {% endif %}
                             </div>
-                            <div class="col-md-12 mb-3">
-                                <label for="id_email" class="form-label">Email*</label>
-                                <input type="email" class="form-control" id="id_email" name="email" placeholder="Введіть ваш email *youremail@example.com" value="{{ form.email.value }}" required>
-                                {% if form.email.errors %}
-                                    <div class="alert alert-danger alert-dismissible fade show">{{ form.email.errors }}</div>
-                                {% endif %}
-                            </div>
+{#                            <div class="col-md-12 mb-3">#}
+{#                                <label for="id_email" class="form-label">Email*</label>#}
+{#                                <input type="email" class="form-control" id="id_email" name="email" placeholder="Введіть ваш email *youremail@example.com" value="{{ form.email.value }}" required>#}
+{#                                {% if form.email.errors %}#}
+{#                                    <div class="alert alert-danger alert-dismissible fade show">{{ form.email.errors }}</div>#}
+{#                                {% endif %}#}
+{#                            </div>#}
                         </div>
                         <button type="submit" class="btn btn-dark">Зберегти</button>
                     </form>
