--- a/users/templates/users/registration.html
+++ b/users/templates/users/registration.html
@@ -31,25 +31,25 @@
                                 {% endif %}
                         </div>
                         <div class="col-md-6 mb-3">
-                            <label for="id_username" class="form-label">Ім'я користувача*</label>
+                            <label for="id_username" class="form-label">Електронна пошта*</label>
                             <input type="text" class="form-control" id="id_username"
                                 value="{% if form.username.value %}{{ form.username.value }}{% endif %}"
                                 name="username"
-                                placeholder="Введіть ваше ім'я користувача" required>
+                                placeholder="Введіть вашу електронну пошту" required>
                                 {% if form.username.errors %}
                                 <div class="alert alert-danger alert-dismissible fade show">{{form.username.errors}}</div>
                                 {% endif %}
                         </div>
-                        <div class="col-md-6 mb-3">
-                            <label for="id_email" class="form-label">Email*</label>
-                            <input type="email" class="form-control" id="id_email"
-                                value="{% if form.email.value %}{{ form.email.value }}{% endif %}"
-                                name="email"
-                                placeholder="Введіть ваш email" required>
-                                {% if form.email.errors %}
-                                <div class="alert alert-danger alert-dismissible fade show">{{form.email.errors}}</div>
-                                {% endif %}
-                        </div>
+{#                        <div class="col-md-6 mb-3">#}
+{#                            <label for="id_email" class="form-label">Email*</label>#}
+{#                            <input type="email" class="form-control" id="id_email"#}
+{#                                value="{% if form.email.value %}{{ form.email.value }}{% endif %}"#}
+{#                                name="email"#}
+{#                                placeholder="Введіть ваш email" required>#}
+{#                                {% if form.email.errors %}#}
+{#                                <div class="alert alert-danger alert-dismissible fade show">{{form.email.errors}}</div>#}
+{#                                {% endif %}#}
+{#                        </div>#}
                         <div class="col-md-6 mb-3">
                             <label for="id_password1" class="form-label">Пароль*</label>
                             <input type="password" class="form-control" id="id_password1"
