--- a/goods/templates/goods/catalog.html
+++ b/goods/templates/goods/catalog.html
@@ -3,6 +3,10 @@
 {% load static %}
 {% load goods_tags %}
 
+{% block modal_cart %}
+    {% include "includes/cart_button.html" %}
+{% endblock %}
+
 {% block content %}
 <div class="container-fluid">
     <div class="row mt-5 mb-4"> <!-- Додано класи mt-5 та mb-4 -->
@@ -54,7 +58,7 @@
                                 {% else %}
                                 <p><strong>{{ product.price }} грн</strong></p>
                                 {% endif %}
-                                <a href="" class="btn add-to-cart" data-product-id="{{ product.id }}">
+                                <a href="{% url 'cart:cart_add' product.slug %}" class="btn add-to-cart" data-product-id="{{ product.id }}">
                                     {% csrf_token %}
                                     <img class="mx-1" src="{% static "deps/icons/cart-plus.svg" %}" alt="Catalog Icon" width="32"
                                         height="32">
