--- a/main/templates/main/contacts.html
+++ b/main/templates/main/contacts.html
@@ -1,7 +1,8 @@
 {% extends "base.html" %}
-
 {% load static %}
-
+{% block modal_cart %}
+{% include 'includes/cart_button.html' %}
+{% endblock %}
 
 
 
