--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -1,38 +1,39 @@
 {% extends 'base.html' %}
 {% load static %}
+{% load carts_tags %}
 
 {% block content %}
 <div class="row">
     <div class="container mt-5">
         <div class="row">
             <!-- Профіль з даними користувача -->
-            <div class="col-md-5">
-                <div class="bg-white p-4 mb-4 mx-2 rounded my-shadow">
-                    <h3 class="text-center mb-4">Профіль користувача</h3>
-                    <form action="{% url 'users:profile' %}" method="post">
-                    {% csrf_token %}
-                        <div class="row">
-                            <div class="col-md-12 mb-3">
-                                <label for="id_first_name" class="form-label">Ім'я</label>
-                                <input type="text" class="form-control" id="id_first_name" name="first_name" placeholder="Введіть ваше ім'я" value="{{ form.first_name.value }}" required>
-                                {% if form.first_name.errors %}
-                                    <div class="alert alert-danger alert-dismissible fade show">{{ form.first_name.errors }}</div>
-                                {% endif %}
-                            </div>
-                            <div class="col-md-12 mb-3">
-                                <label for="id_last_name" class="form-label">Прізвище</label>
-                                <input type="text" class="form-control" id="id_last_name" name="last_name" placeholder="Введіть ваше прізвище" value="{{ form.last_name.value }}" required>
-                                {% if form.last_name.errors %}
-                                    <div class="alert alert-danger alert-dismissible fade show">{{ form.last_name.errors }}</div>
-                                {% endif %}
-                            </div>
-                            <div class="col-md-12 mb-3">
-                                <label for="id_username" class="form-label">Електронна пошта</label>
-                                <input type="text" class="form-control" id="id_username" name="username" placeholder="Введіть вашу електронну пошту" value="{{ form.username.value }}" required>
-                                {% if form.username.errors %}
-                                    <div class="alert alert-danger alert-dismissible fade show">{{ form.username.errors }}</div>
-                                {% endif %}
-                            </div>
+{#            <div class="col-md-5">#}
+{#                <div class="bg-white p-4 mb-4 mx-2 rounded my-shadow">#}
+{#                    <h3 class="text-center mb-4">Профіль користувача</h3>#}
+{#                    <form action="{% url 'users:profile' %}" method="post">#}
+{#                    {% csrf_token %}#}
+{#                        <div class="row">#}
+{#                            <div class="col-md-12 mb-3">#}
+{#                                <label for="id_first_name" class="form-label">Ім'я</label>#}
+{#                                <input type="text" class="form-control" id="id_first_name" name="first_name" placeholder="Введіть ваше ім'я" value="{{ form.first_name.value }}" required>#}
+{#                                {% if form.first_name.errors %}#}
+{#                                    <div class="alert alert-danger alert-dismissible fade show">{{ form.first_name.errors }}</div>#}
+{#                                {% endif %}#}
+{#                            </div>#}
+{#                            <div class="col-md-12 mb-3">#}
+{#                                <label for="id_last_name" class="form-label">Прізвище</label>#}
+{#                                <input type="text" class="form-control" id="id_last_name" name="last_name" placeholder="Введіть ваше прізвище" value="{{ form.last_name.value }}" required>#}
+{#                                {% if form.last_name.errors %}#}
+{#                                    <div class="alert alert-danger alert-dismissible fade show">{{ form.last_name.errors }}</div>#}
+{#                                {% endif %}#}
+{#                            </div>#}
+{#                            <div class="col-md-12 mb-3">#}
+{#                                <label for="id_username" class="form-label">Електронна пошта</label>#}
+{#                                <input type="text" class="form-control" id="id_username" name="username" placeholder="Введіть вашу електронну пошту" value="{{ form.username.value }}" required>#}
+{#                                {% if form.username.errors %}#}
+{#                                    <div class="alert alert-danger alert-dismissible fade show">{{ form.username.errors }}</div>#}
+{#                                {% endif %}#}
+{#                            </div>#}
 {#                            <div class="col-md-12 mb-3">#}
 {#                                <label for="id_email" class="form-label">Email*</label>#}
 {#                                <input type="email" class="form-control" id="id_email" name="email" placeholder="Введіть ваш email *youremail@example.com" value="{{ form.email.value }}" required>#}
@@ -40,21 +41,25 @@
 {#                                    <div class="alert alert-danger alert-dismissible fade show">{{ form.email.errors }}</div>#}
 {#                                {% endif %}#}
 {#                            </div>#}
-                        </div>
-                        <button type="submit" class="btn btn-dark">Зберегти</button>
-                    </form>
-                </div>
-            </div>
+{#                        </div>#}
+{#                        <button type="submit" class="btn btn-dark">Зберегти</button>#}
+{#                    </form>#}
+{#                </div>#}
+{#            </div>#}
             <!-- Кошик -->
+            {% user_carts request as carts %}
             <div class="col-md-7">
                 <div class="bg-white p-4 mb-4 mx-2 rounded my-shadow">
                     <h3 class="text-center mb-4">Кошик</h3>
                     <div class="container" id="cart-items-container">
                         <!-- Розмітка кошика -->
-                        <!-- Ваша розмітка кошика тут -->
+                         {% include "carts/includes/included_cart.html"%}
                         <!-- Закінчилась розмітка кошика -->
                     </div>
-                    <a class="btn btn-dark" href="/orders/create_order.html">Оформити замовлення</a>
+                    {% if carts %}
+                    	<a class="btn btn-dark" href="/orders/create_order.html">Оформити замовлення</a>
+                    {% endif %}
+
                 </div>
             </div>
             <!-- Оформлені замовлення -->
