change cart ajax and all ajax done

--- a/goods/templates/goods/product.html
+++ b/goods/templates/goods/product.html
@@ -16,7 +16,10 @@
         <h2 class="product-title">{{ product.name }}</h2>
         <p class="product-desc">{{ product.description }}</p>
         <h5  class="product-price">{{ product.price }} грн</h5>
-        <a href="{% url 'cart:cart_add' product.slug %}" id="addToCartBtn" class="btn btn-dark inline-block">Додати до кошика</a>
+        <a href="{% url 'cart:cart_add'%}" id="addToCartBtn" class="btn btn-dark inline-block add-to-cart" data-product-id="{{ product.id }}">
+            {% csrf_token %}
+            Додати до кошика
+        </a>
     </div>
 </div>
 {% endblock content %}
