--- a/goods/templates/goods/catalog.html
+++ b/goods/templates/goods/catalog.html
@@ -58,7 +58,7 @@
                                 {% else %}
                                 <p><strong>{{ product.price }} грн</strong></p>
                                 {% endif %}
-                                <a href="{% url 'cart:cart_add' product.slug %}" class="btn add-to-cart" data-product-id="{{ product.id }}">
+                                <a href="{% url 'cart:cart_add'%}" class="btn add-to-cart" data-product-id="{{ product.id }}">
                                     {% csrf_token %}
                                     <img class="mx-1" src="{% static "deps/icons/cart-plus.svg" %}" alt="Catalog Icon" width="32"
                                         height="32">
