--- a/templates/base.html
+++ b/templates/base.html
@@ -12,8 +12,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <meta name="keywords" content="">
     <link rel="stylesheet" href="{% static "deps/css/bootstrap/bootstrap.min.css" %}">
-    <meta name="keywords" content="">
     <link rel="stylesheet" href="{% static "deps/css/my_css.css" %}">
     <link rel="stylesheet" href="{% static "deps/css/catalog_style.css" %}">
     <link rel="stylesheet" href="{% static "deps/css/product_style.css" %}">
@@ -144,10 +144,11 @@
 
  {% endblock %}
 
-
     <script src="{% static "deps/js/jquery/jquery-3.7.0.min.js" %}"></script>
     <script src="{% static "deps/js/jquery-ajax.js" %}"></script>
+    <script src="{% static 'deps/js/main.js' %}"></script>
     <script src="{% static "deps/js/bootstrap/bootstrap.bundle.min.js" %}"></script>
+
 </body>
 
 </html>
