--- a/templates/includes/cart_button.html
+++ b/templates/includes/cart_button.html
@@ -24,7 +24,7 @@
                     <!-- Закончилась разметка корзины -->
                 </div>
                 {% if carts %}
-                	<a class="btn btn-dark" href="orders/create_order.html">Оформити замовлення</a>
+                	<a class="btn btn-dark" href="{% url 'orders:create_order' %}">Оформити замовлення</a>
                 {% endif %} 
 
             </div>
