--- a/orders/templates/orders/create_order.html
+++ b/orders/templates/orders/create_order.html
@@ -7,13 +7,14 @@
     <div class="container">
         <h3 class="text-center mb-4">Обрані товари</h3>
         <div class="container" id="cart-items-container">
-            <!-- Розмітка кошика -->
+            <!-- Разметка корзины -->
             {% user_carts request as carts %}
+
             {% include "carts/includes/included_cart.html" %}
-            <!-- Закінчилася розмітка кошика -->
+            <!-- Закончилась разметка корзины -->
         </div>
     </div>
-    <!-- Деталі замовлення -->
+    <!-- Детали заказа -->
     <div class="container">
         <h3 class="text-center">Деталі замовлення</h3>
         <div class="card mb-3">
@@ -43,12 +44,13 @@
                             <label for="id_phone_number" class="form-label">Номер телефону*:</label>
                             <input type="text" class="form-control" id="id_phone_number" name="phone_number"
                                 value="{% if form.phone_number.value %}{{ form.phone_number.value }}{% endif %}"
-                                placeholder="У форматі: XXX-XXX-XX-XX"
+                                placeholder="В формате: XXX-XXX-XX-XX"
                                 required>
                             {% if form.phone_number.errors %}
                                 <div class="alert alert-danger alert-dismissible fade show">{{form.phone_number.errors}}</div>
                             {% endif %}
                         </div>
+
                     </div>
                     <button type="submit" class="btn btn-dark">Оформити замовлення</button>
                 </form>
