--- a/static/deps/css/my_css.css
+++ b/static/deps/css/my_css.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url("../images/Дизайн без названия.png");
+  background-image: url("../images/bg-image.png");
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position: center center;
